--- a/index.html
+++ b/index.html
@@ -484,10 +484,35 @@
             </li>
           </ul>
         </div>
+        <!-- FOOTER FORM -->
+        <div class="footer-form-container">
+          <p class="footer-form-p">Subscribe</p>
+          <form class="form-class" action="#" method="post">
+            <!-- fild for e-mail -->
+            <label class="label-class">
+              <input
+                class="input-class"
+                type="email"
+                name="email-field"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+
+            <button class="button-class" type="submit">
+              Subscribe
+              <!-- SVG icon in button -->
+              <svg class="icon-class" width="24" height="24">
+                <use href="./images/icons-modal.svg#icon-btn-icon"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
     <!--Modal window-->
-    <div class="modal-backdrop">
+    <div class="modal-backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -550,7 +575,7 @@
             </div>
           </div>
 
-          <div class="review-form-field">
+          <div class="review-form-textarea">
             <label class="review-form-field-label" for="user-comment"
               >Comment</label
             >
