--- a/index.html
+++ b/index.html
@@ -576,19 +576,17 @@
           </div>
 
           <div class="review-form-textarea">
-            <label class="review-form-field-label" for="user-comment"
-              >Comment</label
+            <label class="review-form-field-label" for="user-comment">
+              Comment
+            </label>
+            <textarea
+              class="review-form-comments"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Enter text"
+              required
             >
-            <div class="review-form-input-wrapper">
-              <textarea
-                class="review-form-comments"
-                id="user-comment"
-                name="user-comment"
-                placeholder="Enter text"
-                required
-              >
-              </textarea>
-            </div>
+            </textarea>
           </div>
 
           <div class="review-form-checkbox-wrapper">
