--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
               class="review-form-comments"
               id="user-comment"
               name="user-comment"
-              placeholder="Enter text"
+              placeholder="Text input"
               required
             >
             </textarea>
@@ -592,13 +592,13 @@
           <div class="review-form-checkbox-wrapper">
             <input
               class="review-form-checkbox visually-hidden"
-              id="privacy-policy"
+              id="user-privacy"
               type="checkbox"
-              name="privacy-policy"
+              name="user-privacy"
               value="true"
               required
             />
-            <label class="review-form-checkbox-label" for="privacy-policy">
+            <label class="review-form-checkbox-label" for="user-privacy">
               <span class="review-form-custom-checkbox">
                 <svg class="review-form-checkbox-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-checkbox"></use>
