--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
               Subscribe
               <!-- SVG icon in button -->
               <svg class="icon-class" width="24" height="24">
-                <use href="./images/icons-modal.svg#icon-btn-icon"></use>
+                <use href="./images/icons.svg#icon-btn-icon"></use>
               </svg>
             </button>
           </form>
@@ -600,7 +600,7 @@
             />
             <label class="review-form-checkbox-label" for="user-privacy">
               <span class="review-form-custom-checkbox">
-                <svg class="review-form-checkbox-icon" width="16" height="16">
+                <svg class="review-form-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
