--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             <label class="review-form-checkbox-label" for="user-privacy">
               <span class="review-form-custom-checkbox">
                 <svg class="review-form-checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-checkbox"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
